Apply spacing fix from 9fcaf76 to posts as well

--- a/extension/data/styles/toolbox.css
+++ b/extension/data/styles/toolbox.css
@@ -43,6 +43,7 @@ body.mod-toolbox[toolbox-warning]::before {
     margin-bottom: 3px;
 }
 
+.mod-toolbox-rd .tb-frontend-container[data-tb-type="TBpostAuthor"],
 .mod-toolbox-rd .tb-frontend-container[data-tb-type="TBcommentAuthor"] {
     /* Spacing fix for user buttons on old Reddit (why is whitespace significant in HTML reeeee) */
     display: inline-flex;
